--- a/docs/_posts/2017-07-28-welcome.md
+++ b/docs/_posts/2017-07-28-welcome.md
@@ -5,6 +5,27 @@ date:   2017-07-28 06:31:13
 categories: math_demo update
 ---
 
-### Requirements
+# Math Demo Wiki
 
-Requires propane
+### How do I run it?
+
+```bash
+math_demo
+```
+Might not work on Windows with the current release of propane, but should work (on 64 bit OS) with the experimental version
+
+```bash
+jgem install propane --pre # spefically only Windows 64 binaries
+propane --version # 2.20.pre
+```
+
+### What's happening
+
+Three random moving particles are created (they are restricted to moving in the frame). The display is the outline of an ellipse (circle) that is a circumcircle. That is circle that goes through three points given by the particles position. The color of the circle, changes gradually, apart from being constrained (by the frame) the points also sometimes change direction randomly. Periodically the whole sketch is refreshed.
+
+### Why?
+
+This is very much a taster of what can be done with [propane][propane], a batteries included ruby-wrapper for processing-3.3.5. See more [examples here][examples]
+
+[examples]:https://github.com/ruby-processing/propane-examples
+[propane]:https://ruby-processing.github.io/propane/2016/10/30/welcome-to-propane.html
