--- a/docs/_posts/2017-07-28-welcome.md
+++ b/docs/_posts/2017-07-28-welcome.md
@@ -5,7 +5,13 @@ date:   2017-07-28 06:31:13
 categories: math_demo update
 ---
 
-# Math Demo Wiki
+### Requirements
+
+[jruby][jruby] and [propane][propane], it is important that `jruby` is on your `path` preferably `/usr/bin/jruby` (you can create a symbolic link if your install method does not do it for you) if you want to run sketch from atom (and tests).
+
+### build
+
+jruby -S rake (rake will suffice if you only have installed jruby)
 
 ### How do I run it?
 
