--- a/docs/_posts/2017-07-28-welcome.md
+++ b/docs/_posts/2017-07-28-welcome.md
@@ -35,3 +35,4 @@ This is very much a taster of what can be done with [propane][propane], a batter
 
 [examples]:https://github.com/ruby-processing/propane-examples
 [propane]:https://ruby-processing.github.io/propane/2016/10/30/welcome-to-propane.html
+[jruby]:http://jruby.org/
