--- a/docs/_posts/2017-07-31-math.md
+++ b/docs/_posts/2017-07-31-math.md
@@ -13,11 +13,11 @@ Is a circle which passes through all three vertices of a triangle. See [Math Ope
 
 For detailed workings see [Circumcircle at Mathworld Wolfram.com][circumcircle]
 
-a = /{/{x<sub>1</sub> y<sub>1</sub> 1/}, /{x<sub>2</sub> y<sub>2</sub> 1/}, /{x<sub>3</sub> y<sub>3</sub> 1/}/}
+a = \{\{x<sub>1</sub> y<sub>1</sub> 1\}, \{x<sub>2</sub> y<sub>2</sub> 1\}, \{x<sub>3</sub> y<sub>3</sub> 1\}\}
 
-bx = -/{/{x<sub>1</sub><sup>2</sup> + y<sub>1</sub><sup>2</sup> y<sub>1</sub> 1/}, /{x<sub>2</sub><sup>2</sup> + y<sub>2</sub><sup>2</sup> y<sub>2</sub> 1/}, /{x<sub>3</sub><sup>2</sup> + y<sub>3</sub><sup>2</sup> y<sub>3</sub> 1/}/}
+bx = -\{\{x<sub>1</sub><sup>2</sup> + y<sub>1</sub><sup>2</sup> y<sub>1</sub> 1\}, \{x<sub>2</sub><sup>2</sup> + y<sub>2</sub><sup>2</sup> y<sub>2</sub> 1\}, \{x<sub>3</sub><sup>2</sup> + y<sub>3</sub><sup>2</sup> y<sub>3</sub> 1\}\}
 
-by = /{/{x<sub>1</sub><sup>2</sup> + y<sub>1</sub><sup>2</sup> x<sub>1</sub> 1/}, /{x<sub>2</sub><sup>2</sup> + y<sub>2</sub><sup>2</sup> x<sub>2</sub> 1/}, /{x<sub>3</sub><sup>2</sup> + y<sub>3</sub><sup>2</sup> x<sub>3</sub> 1/}/}
+by = \{\{x<sub>1</sub><sup>2</sup> + y<sub>1</sub><sup>2</sup> x<sub>1</sub> 1\}, \{x<sub>2</sub><sup>2</sup> + y<sub>2</sub><sup>2</sup> x<sub>2</sub> 1\}, \{x<sub>3</sub><sup>2</sup> + y<sub>3</sub><sup>2</sup> x<sub>3</sub> 1\}\}
 
 xo = -bx / 2 * a
 
