--- a/docs/_posts/2017-07-31-math.md
+++ b/docs/_posts/2017-07-31-math.md
@@ -7,7 +7,7 @@ categories: math_demo update
 
 ### The Circumcircle of a Triangle ###
 
-Is a circle which passes through all three vertices of a triangle. See [Math Open Reference][math_open]. See also this simpler [propane sketch][circumcircle_sketch], note the simplified collinearity test in the `Points` class, where we make use of Vec2D math (don't try this with processings PVector class because, it doesn't know whether it is 2D or 3D vector and hence deeply flawed).
+Is a circle which passes through all three vertices of a triangle. See [Math Open Reference][math_open]. See also this simpler [propane sketch][circumcircle_sketch], note the simplified collinearity test in the `Points` class, where we make use of `Vec2D` math (don't try this with processings `PVector` class because, it doesn't know whether it is `2D` or `3D` vector and hence deeply flawed).
 
 ### Using Matrix Math ###
 
