--- a/docs/_posts/2017-07-31-atom.md
+++ b/docs/_posts/2017-07-31-atom.md
@@ -7,7 +7,7 @@ categories: math_demo update
 
 ### Running the Sketch from the Atom Editor ###
 
-Use the [script][script] plugin to run your sketch from the atom editor
+Since [atom 1.18][blog] you can manage your github projects from atom. Further you should use the [script][script] plugin to run propane sketches from the atom editor.
 
 ![sketch.png]({{site.github.url}}/assets/sketch.png)
 
@@ -18,3 +18,5 @@ Use the [script][script] plugin to run your tests from the atom editor
 ![circumcircle_test.png]({{site.github.url}}/assets/circumcircle_test.png)
 
 ![triangle_point_test.png]({{site.github.url}}/assets/triangle_point_test.png)
+
+[blog]:http://blog.atom.io/2017/06/13/atom-1-18.html
