headers for tests

--- a/docs/_posts/2017-07-31-atom.md
+++ b/docs/_posts/2017-07-31-atom.md
@@ -15,7 +15,11 @@ Since [atom 1.18][blog] you can manage your github projects from atom. Further y
 
 Use the [script][script] plugin to run your tests from the atom editor
 
+__Circumcircle Class Test__
+
 ![circumcircle_test.png]({{site.github.url}}/assets/circumcircle_test.png)
+
+__TrianglePoint Class Test__
 
 ![triangle_point_test.png]({{site.github.url}}/assets/triangle_point_test.png)
 
