add message on install

--- a/docs/_posts/2017-07-31-atom.md
+++ b/docs/_posts/2017-07-31-atom.md
@@ -19,7 +19,7 @@ __Circumcircle Class Test__
 
 ![circumcircle_test.png]({{site.github.url}}/assets/circumcircle_test.png)
 
-__TrianglePoint Class Test__
+__TrianglePoints Class Test__
 
 ![triangle_point_test.png]({{site.github.url}}/assets/triangle_point_test.png)
 
