--- a/docs/_posts/2017-07-28-welcome.md
+++ b/docs/_posts/2017-07-28-welcome.md
@@ -33,6 +33,8 @@ Three random moving particles are created (they are restricted to moving in the 
 
 This is very much a taster of what can be done with [propane][propane], a batteries included ruby-wrapper for processing-3.3.5. See more [examples here][examples]
 
+![animation.gif]({{site.github.url}}/assets/animation.gif)
+
 [examples]:https://github.com/ruby-processing/propane-examples
 [propane]:https://ruby-processing.github.io/propane/2016/10/30/welcome-to-propane.html
 [jruby]:http://jruby.org/
