assume load from rubygems

--- a/docs/_posts/2017-07-28-welcome.md
+++ b/docs/_posts/2017-07-28-welcome.md
@@ -7,22 +7,29 @@ categories: math_demo update
 
 ### Requirements
 
-[jruby][jruby] and [propane][propane], it is important that `jruby` is on your `path` preferably `/usr/bin/jruby` (you can create a symbolic link if your install method does not do it for you) if you want to run sketch from atom (and tests).
+[jruby][jruby] it is important that `jruby` is on your `path` preferably `/usr/bin/jruby` (you can create a symbolic link if your install method does not do it for you)
 
-### build
+Install jdk-1.8.0_151+
 
-jruby -S rake (rake will suffice if you only have installed jruby)
+Install jruby-9.1.15.0+
+
+### Install from rubygems
+```bash
+jruby -S gem install math_demo
+# or
+jgem install math_demo
+# or if default ruby is jruby
+gem install math_demo
+```
+
+Congratulation you have installed [propane][propane] a standalone version of `ruby-processing`, that includes processing.org `core.jar` and on linux and macOS the opengl binaries (currently these are not included on windows)
 
 ### How do I run it?
 
 ```bash
 math_demo
-```
-Might not work on Windows with the current release of propane, but should work (on 64 bit OS) with the experimental version
-
-```bash
-jgem install propane --pre # spefically only Windows 64 binaries
-propane --version # 2.20.pre
+# or to be safe
+jruby -S math_demo
 ```
 
 ### What's happening
@@ -31,7 +38,7 @@ Three random moving particles are created (they are restricted to moving in the 
 
 ### Why?
 
-This is very much a taster of what can be done with [propane][propane], a batteries included ruby-wrapper for processing-3.3.5. See more [examples here][examples]
+This is very much a taster of what can be done with [propane][propane], a batteries included ruby-wrapper for processing-3.3.6. See more [examples here][examples]
 
 ![animation.gif]({{site.github.url}}/assets/animation.gif)
 
