--- a/docs/_posts/2017-07-28-welcome.md
+++ b/docs/_posts/2017-07-28-welcome.md
@@ -9,9 +9,9 @@ categories: math_demo update
 
 [jruby][jruby] it is important that `jruby` is on your `path` preferably `/usr/bin/jruby` (you can create a symbolic link if your install method does not do it for you)
 
-Install jdk-1.8.0_151+
+Install jdk-11+
 
-Install jruby-9.1.15.0+
+Install jruby-9.2.6.0+
 
 ### Install from rubygems
 ```bash
@@ -22,7 +22,7 @@ jgem install math_demo
 gem install math_demo
 ```
 
-Congratulation you have installed [propane][propane] a standalone version of `ruby-processing`, that includes processing.org `core.jar` and on linux and macOS the opengl binaries (currently these are not included on windows)
+Congratulation you have installed [propane][propane] a standalone version of `ruby-processing`, compiled with jdk11
 
 ### How do I run it?
 
